# anchor-template

./: .eslintignore  .eslintrc  .gitignore  Anchor.toml  README.md  TODO  get-deploy-account.js  package.json
programs/anchor-example/: Cargo.toml
programs/anchor-example/src/: lib.rs
tests/: hello-world.ts
ts-bignumber/: chai-bignumbers.d.ts
