[package]
name = "anchor-template"
version = "0.1.0"
description = "A blank project"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_template"
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.15.0" 
anchor-spl = "0.15.0"
